# trove

./: .env.example  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  vercel.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
artifacts/: community_benefit_gap_2022.csv  community_benefit_gap_2022_summary.md  community_benefit_gap_2022_top50.csv  fda_approvals_nme_recent.csv
docs/: index.md
notebooks/: README.md
pipelines/: README.md
scripts/: build_drug_pages.py  build_fda_index.py  build_gap_dataset.py  build_og_image.py  build_skill_references.py  build_web_bundles.py  build_web_data.py  demo_community_benefit_gap.py  demo_hospital_summary.py
skills/: README.md
skills/fda-analyst/: SKILL.md
skills/fda-analyst/references/: document_types.md  examples.md  sources.md
skills/hcris-analyst/: SKILL.md
skills/hcris-analyst/references/: cohorts.md  dictionary.md  examples.md  parquet_layout.md  schedule_h.md
web/: README.md  index.html  robots.txt  sitemap.xml
web/data/: community_benefit_gap_2022.json  community_benefit_gap_2022.parquet  fda_approvals_nme_recent.json  fda_approvals_nme_recent.parquet  hcris_2023_wide.parquet  schedule_h_2022.parquet
web/docs/: index.html
web/docs/fda-nme/: index.html
web/docs/hcris/: index.html
web/docs/schedule-h/: index.html
web/drugs/: index.html
web/drugs/abecma/: index.html
web/drugs/adbry/: index.html
web/drugs/adstiladrin/: index.html
web/drugs/aduhelm/: index.html
web/drugs/agamree/: index.html
web/hospitals/: index.html
web/skills/: index.html
(+215 files in other folders)
